--- a/MapsTest4/Content/Site.css
+++ b/MapsTest4/Content/Site.css
@@ -4,9 +4,9 @@ to use a different color start by replacing all instances of
 #5c87b2 with your new color.
 ----------------------------------------------------------*/
 body {
-    background-color: #444;
+    background-color: #222;
     font-size: .85em;
-    font-family: "Trebuchet MS", Verdana, Helvetica, Sans-Serif;
+    font-family: "Segoe UI Semibold";
     margin: 0;
     padding: 0;
     color: #696969;
