--- a/MapsTest4/Views/Shared/_Layout.cshtml
+++ b/MapsTest4/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>@ViewBag.Title</title>
+    <link href="@Url.Content("~/Content/bootstrap.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
 </head>
@@ -9,7 +10,14 @@
     <div class="page">
         <div id="header">
             <div id="title">
-                <h1>Five Star ***** Service Finder</h1>
+                <h1>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    Five Star Service Finder
+                </h1>
             </div>
             <div id="logindisplay">
                 @Html.Partial("_LogOnPartial")
