--- a/MapsTest4/Content/Site.css
+++ b/MapsTest4/Content/Site.css
@@ -6,7 +6,7 @@ to use a different color start by replacing all instances of
 body {
     background-color: #222;
     font-size: .85em;
-    font-family: "Segoe UI Semibold";
+    font-family: "Gabriola";
     margin: 0;
     padding: 0;
     color: #696969;
